--- a/app/views/teacher/dashboard/usage.html.erb
+++ b/app/views/teacher/dashboard/usage.html.erb
@@ -1,5 +1,8 @@
 <script type="text/javascript">
     window.charts = {}
+
+    window.charts.genders = <%= @genders.to_json.html_safe %>;
+
     window.charts.device_usage = [
         <%= @device_usage["mobile_and_desktop"] %>,
         <%= @device_usage["desktop"] %>,
@@ -8,12 +11,17 @@
     window.charts.user_review_count = <%= @user_review_count.to_json.html_safe %>;
     window.charts.reviews_over_semester = <%= @reviews_over_semester.to_json.html_safe %>;
     window.charts.reviews_since_registering = <%= @reviews_since_registering.to_json.html_safe %>;
+
 </script>
 
 
 <div class="row">
   <div class="span8">
     <h1>Usage Statistics</h1>
+
+    <h3>User Genders</h3>
+    <div id="gender-chart" class="chart">
+    </div>
 
     <h3>Device Usage</h3>
     <div id="device-usage-chart" class="chart">
